# Phantom

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md
config/: phantom.conf.defaults
distros/centos/: openalpr.spec
distros/debian/: libopenalpr-data.install
doc/man/: alpr.1
src/: CMakeLists.txt  main.cpp
src/cmake_modules/: FindTesseract.cmake
src/misc_utilities/: binarizefontsheet.cpp  calibrate.cpp
src/phantom/: CMakeLists.txt  alpr.cpp  alpr.h  alpr_c.cpp  alpr_c.h  alpr_impl.cpp  alpr_impl.h  binarize_wolf.cpp  binarize_wolf.h  config.cpp  config_helper.cpp  constants.h  prewarp.cpp  prewarp.h  result_aggregator.cpp  result_aggregator.h  transformation.cpp  transformation.h  utility.cpp  utility.h
src/phantom/detection/: detectorfactory.cpp  detectorocl.cpp  detectorocl.h
src/phantom/ocr/: tesseract_ocr.cpp
src/phantom/postprocess/: regexrule.cpp
src/phantom/support/: filesystem.cpp  filesystem.h
src/tclap/: StdOutput.h
src/video/: videobuffer.h
